--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <script type="text/javascript" src="/JS/script.js"></script>
 </head>
 <body>
-    <h1>Hej</h1>
+<h1>Welcome to my Website ⭐️</h1>
+<p>How was your day? 🎉</p>
 </body>
 </html>
